src/test/deca/context/invalid/resultats/test4_op_modulo2-cont.res
./src/test/deca/context/invalid/test4_op_modulo2.deca:16:1: Modulo operator must be applied to two expression of int type (right expression's type : string, left expression's type : int).
